# MH26

./: .env  .gitignore  CMakeLists.txt  CMakePresets.json  add_txlib.cmake  env.hpp
config/: config.json
src/: AudioEngine.hpp  MainClass.hpp  Project.hpp  QueueManager.hpp  backend,hpp  main.cpp  main_class.hpp  player.hpp  utility_dump.hpp  youtube_api.hpp
